test/conformance/chainsaw/mutating-policies/existing/resize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-resize
