test/conformance/chainsaw/mutating-policies/existing/resize/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-mpol-resize
  namespace: test-mpol-resize
spec:
  containers:
  - name: pause
    image: registry.k8s.io/pause:3.10
    resources:
      requests:
        cpu: 100m
        memory: 16Mi
      limits:
        cpu: 500m
        memory: 64Mi
