test/conformance/chainsaw/mutating-policies/existing/resize/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-mpol-resize
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["get"]
- apiGroups: [""]
  resources: ["pods/resize"]
  verbs: ["update"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-mpol-resize
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: test-mpol-resize
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
