test/conformance/chainsaw/mutating-policies/existing/resize/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-mpol-resize
  namespace: test-mpol-resize
spec:
  containers:
  - name: pause
    resources:
      requests:
        cpu: 200m
